# pyidi

./: .gitignore  .travis.yml  Development.ipynb  LICENSE  MM_dev.ipynb  README.md  Showcas_LK.ipynb  Showcas_LK_1D.ipynb  Showcase.ipynb  Showcase_MM.ipynb  Showcase_MS_mag.ipynb  Untitled.ipynb  __init__.py  h origin HEAD --force  pyproject.toml  requirements.txt  setup.py  sync_version.py  test.ipynb  tests.py
.github/workflows/: python_package_testing.yaml  release_and_publish_to_pypi.yaml
data/: MSMag_Reference_image.npy  MSMag_coord.npy  MSMag_vect_0.npy  MSMag_vect_1.npy  Speckle_beam_2k.cih  data_showcase.cih  data_showcase.mraw  data_synthetic.cih  data_synthetic_generated.npy  data_synthetic_generated.pkl  data_synthetic_img.cih
docs/: requirements.txt
docs/source/: Showcase_MS_mag.nblink  conf.py  fiducial_marker.rst  index.rst  installation.rst  mode_shape_magnification.rst
docs/source/code/: modules.rst
docs/source/contributing/: documenting.rst
docs/source/quick_start/: basic_usage.rst  disp_id_methods.rst  multiprocessing.rst  napari.rst  points_selection.rst
examples/: Showcas_LK_1D.ipynb  Showcase_PyIDI_videoreader.ipynb  Showcase_fiducial.ipynb  Showcase_point_picker.ipynb
my_folder/: my_video.avi  my_video.mov
pyidc/: __init__.py  _simplified_optical_flow.py  idc_methods.py  idi_methods.py  pyidc.py
pyidi/: __init__.py  _gradient_based_optical_flow.py  _simplified_optical_flow.py  fiducial.py  gui.py  load_analysis copy.py  load_analysis.py  progress_bar.py  pyidc.py  pyidi.py  pyidi_legacy.py  selection.py  slow_reader.py  tools.py  video_reader.py
pyidi/Automatic_selection/: feature_selector.py  filters.py  picking_methods.py
pyidi/GUIs/: __init__.py  gui.py  result_viewer.py  selection.py  subset_selection.py
pyidi/methods/: __init__.py  _dic.py  _dic_translation.py  _directional_lucas_kanade.py  _gradient_based_optical_flow.py  _lk_dic.py  _lucas_kanade.py  _lucas_kanade_scipy.py  _lucas_kanade_scipy2.py  _simplified_optical_flow.py  idi_method.py  video_reader.py
pyidi/postprocessing/: __init__.py  _motion_magnification.py
pyidi/selection/: __init__.py  along_line.py  main_window.py
scripts/: Example2 - Real dataset.rst  sensor_coordinates.xlsx  sensor_coordinates2.xlsx
scripts/.pyoma2_data/test_data/palisaden/: Geo1.xlsx  Geo2.xlsx
tests/: test_basic.py  test_fiducial.py  test_get_displacements.py  test_get_displacements_PNG.py  test_npndarray.py
tests/test_reader/: test_reader.py
